bases/ingress/istio-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway

spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    # protocol: mysql disable by default needs to be activated in Pilot for security reason
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: java-demo-backend-virtual-service

spec:
  gateways:
    - public-gateway.default.svc.cluster.local
  hosts:
    - "*"
    # - java-demo-backend-service.default.svc.cluster.local

  http:
      # if multiple services use match
    - name: "java-demo-backend"
      route:
        - destination:
            host: java-demo-backend-service.default.svc.cluster.local
            port:
              number: 8080
